{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 336,
  "lineage": "05a74a84-8cf6-c70f-a444-9c9c2766cbd2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kptn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:security-group/sg-0d1f7ca0f02599e89",
            "description": "kptn Step Functions tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1f7ca0f02599e89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "basic-tasks-20251125221226453300000007",
            "name_prefix": "basic-tasks-",
            "owner_id": "576127390344",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "basic-tasks-sg"
            },
            "tags_all": {
              "Name": "basic-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "sg-0d1f7ca0f02599e89",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.kptn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:security-group/sg-03afbf53798a01c67",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03afbf53798a01c67",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "basic-vpc-endpoints-2025112522122646130000000a",
            "name_prefix": "basic-vpc-endpoints-",
            "owner_id": "576127390344",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "basic-vpc-endpoints-sg"
            },
            "tags_all": {
              "Name": "basic-vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "sg-03afbf53798a01c67",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.kptn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kptn_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1037909304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0d1f7ca0f02599e89",
            "security_group_rule_id": "sgr-08ffe4ca0d6696199",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.kptn",
            "aws_vpc.kptn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kptn_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2856142583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0d1f7ca0f02599e89",
            "security_group_rule_id": "sgr-08ffe4ca0d6696199",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.kptn",
            "aws_vpc.kptn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kptn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:subnet/subnet-0a72a5a68b4bb6473",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a72a5a68b4bb6473",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576127390344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-subnet-01"
            },
            "tags_all": {
              "Name": "basic-subnet-01"
            },
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "subnet-0a72a5a68b4bb6473",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.kptn",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:subnet/subnet-046e75b830910f693",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046e75b830910f693",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576127390344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-subnet-02"
            },
            "tags_all": {
              "Name": "basic-subnet-02"
            },
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "subnet-046e75b830910f693",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.kptn",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kptn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:vpc/vpc-0e89922e27e683f3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068e9aa0828e8e714",
            "default_route_table_id": "rtb-0ffc7341714ae595d",
            "default_security_group_id": "sg-0137b1c87fb483a2c",
            "dhcp_options_id": "dopt-0c1b9c11d18db5888",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e89922e27e683f3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffc7341714ae595d",
            "owner_id": "576127390344",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc"
            },
            "tags_all": {
              "Name": "basic-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "vpc-0e89922e27e683f3c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:vpc-endpoint/vpce-0dd487e0587e85db1",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dd487e0587e85db1",
            "ip_address_type": "ipv4",
            "owner_id": "576127390344",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ffc7341714ae595d"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "basic-dynamodb-endpoint"
            },
            "tags_all": {
              "Name": "basic-dynamodb-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "vpce-0dd487e0587e85db1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.kptn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:vpc-endpoint/vpce-06755b07bf203f7a5",
            "dns_entry": [
              {
                "dns_name": "vpce-06755b07bf203f7a5-7osfqwl8.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06755b07bf203f7a5-7osfqwl8-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06755b07bf203f7a5-7osfqwl8-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z088858732XJ1D0QO7E8U"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z08225711BLMWN3EDAS9N"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06755b07bf203f7a5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0953ca254d7e4be23",
              "eni-0effe9999afd447f6"
            ],
            "owner_id": "576127390344",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-03afbf53798a01c67"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.224",
                "subnet_id": "subnet-0a72a5a68b4bb6473"
              },
              {
                "ipv4": "10.0.2.151",
                "subnet_id": "subnet-046e75b830910f693"
              }
            ],
            "subnet_ids": [
              "subnet-046e75b830910f693",
              "subnet-0a72a5a68b4bb6473"
            ],
            "tags": {
              "Name": "basic-ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "basic-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "vpce-06755b07bf203f7a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.kptn",
            "aws_vpc.kptn",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:vpc-endpoint/vpce-06dd8647275a0741a",
            "dns_entry": [
              {
                "dns_name": "vpce-06dd8647275a0741a-w4etbfg5.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06dd8647275a0741a-w4etbfg5-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06dd8647275a0741a-w4etbfg5-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04077901XGY1BCZFMFRB"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04077901XGY1BCZFMFRB"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z08207503KI5A11YN8ZCF"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z08207503KI5A11YN8ZCF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06dd8647275a0741a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-022eddd6ff1f54b63",
              "eni-071cd23a722301fd9"
            ],
            "owner_id": "576127390344",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-03afbf53798a01c67"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.191",
                "subnet_id": "subnet-0a72a5a68b4bb6473"
              },
              {
                "ipv4": "10.0.2.110",
                "subnet_id": "subnet-046e75b830910f693"
              }
            ],
            "subnet_ids": [
              "subnet-046e75b830910f693",
              "subnet-0a72a5a68b4bb6473"
            ],
            "tags": {
              "Name": "basic-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "basic-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "vpce-06dd8647275a0741a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.kptn",
            "aws_vpc.kptn",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:vpc-endpoint/vpce-0b51cd443ec2c78d3",
            "dns_entry": [
              {
                "dns_name": "vpce-0b51cd443ec2c78d3-ge73vdzo.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b51cd443ec2c78d3-ge73vdzo-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b51cd443ec2c78d3-ge73vdzo-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04078621L8TL28TBOKZ8"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04541703JWSRIP9TJEYX"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04527551FQDY1GA14PAN"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04078161PU6WJGGRDHL4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b51cd443ec2c78d3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-025d4b7f6fa81f40e",
              "eni-077a2c86d19e0ef1c"
            ],
            "owner_id": "576127390344",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-03afbf53798a01c67"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.248",
                "subnet_id": "subnet-0a72a5a68b4bb6473"
              },
              {
                "ipv4": "10.0.2.160",
                "subnet_id": "subnet-046e75b830910f693"
              }
            ],
            "subnet_ids": [
              "subnet-046e75b830910f693",
              "subnet-0a72a5a68b4bb6473"
            ],
            "tags": {
              "Name": "basic-logs-endpoint"
            },
            "tags_all": {
              "Name": "basic-logs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "vpce-0b51cd443ec2c78d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.kptn",
            "aws_vpc.kptn",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576127390344:vpc-endpoint/vpce-04235e49229e6ea31",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04235e49229e6ea31",
            "ip_address_type": "ipv4",
            "owner_id": "576127390344",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ffc7341714ae595d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "basic-s3-endpoint"
            },
            "tags_all": {
              "Name": "basic-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e89922e27e683f3c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "576127390344",
            "id": "vpce-04235e49229e6ea31",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.kptn"
          ]
        }
      ]
    }
  ]
}